--- a/package.json
+++ b/package.json
@@ -1,22 +1,42 @@
 {
-  "name": "custom-stater-project",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.0.8",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.8",
-    "@types/react": "17.0.38",
-    "eslint": "8.6.0",
-    "eslint-config-next": "12.0.8",
-    "typescript": "4.5.4"
-  }
+	"name": "custom-stater-project",
+	"private": true,
+	"scripts": {
+		"dev": "nodemon api/app.js",
+		"build": "next build",
+		"start": "NODE_ENV=production node api/app.js",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@prisma/client": "^3.8.0",
+		"axios": "^0.24.0",
+		"cors": "^2.8.5",
+		"dotenv": "^11.0.0",
+		"dotenv-safe": "^8.2.0",
+		"express": "^4.17.2",
+		"framer-motion": "^5.6.0",
+		"jsonwebtoken": "^8.5.1",
+		"moment": "^2.29.1",
+		"multer": "^1.4.4",
+		"mysql2": "^2.3.3",
+		"next": "12.0.8",
+		"next-themes": "^0.0.15",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"react-icons": "^4.3.1",
+		"winston": "^3.4.0"
+	},
+	"devDependencies": {
+		"@types/node": "^17.0.8",
+		"@types/react": "17.0.38",
+		"@typescript-eslint/eslint-plugin": "^5.9.1",
+		"autoprefixer": "^10.4.2",
+		"eslint": "8.6.0",
+		"eslint-config-next": "12.0.8",
+		"nodemon": "^2.0.15",
+		"postcss": "^8.4.5",
+		"prisma": "^3.8.0",
+		"tailwindcss": "^3.0.13",
+		"typescript": "4.5.4"
+	}
 }
