Blog post starter

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
-NEXT_PUBLIC_MAIN_PATH="http://localhost:3000/base/"
-DATABASE_URL="mysql://root:@localhost:3306/prisma_db"
+NEXT_PUBLIC_MAIN_PATH=http://localhost:3000/
+DATABASE_URL=mysql://root:@localhost:3306/prisma_db
+GRAPHQL=http://localhost:8055/graphql/
+NEXT_PUBLIC_GRAPHQL=http://localhost:8055/graphql/
+ASSETS="http://localhost:8055/assets/"
+NEXT_PUBLIC_ASSETS="http://localhost:8055/assets/"
