--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
 		"react-icons": "^4.3.1",
+		"react-query": "^3.34.12",
 		"winston": "^3.4.0"
 	},
 	"devDependencies": {
